
v 0.0.13
  - deliverd remote: add cache for not responding host
  - microservices: deliverd telemetry
  - microservices: smtpd telemetry
  - deliverd: add specific queue life time for bounces
  - microservices: get routes via ms
  - microservices: check smtp relayok


v 0.0.12
  - bugfix: limit retry interval to 1 Hour
  - improve recover in smtpd

V 0.0.11
  - bugfix: "key" for queued message

V 0.0.10
  - full RFC 5321 compliance
	- new SMTP client for remote deliveries
	- new store backend: openstack open storage
	- alias
	-

V 0.0.9
	- Better handling of smtpd TLS error
	- bugfix: on RSET
	- bugfix: second STARTTLS response (see RFC 3207 4.2)
	- Log; add queue ID
	- DKIM: per domain
	- DKIM: cli tool
	- Webservices: poc

V 0.0.8
	- DKIM: sign outgoing message (test)

V 0.0.7
	- BugFix message-id
	- REST /queue
	- Bugfix: race condition on deliverd
	- Add concurrency limits on smtpd

V 0.0.6
	- REST API base
	- REST API /users

V 0.0.5
	- Log to file
	- Improve log
	- Case sensitivity on local part
	- add RSET and NOOP SMTP verbs

v 0.0.4
	- Local deliveries
	- Dovecot support

v 0.0.3
	- Bugfix: MySQL Datetime to Golang time.Time
	- BugFix: Optimise/fix queries for Mysql

v 0.0.2
	- add Clamav support: http://tmail.io/doc/filtrage-smtp-antivirus-clamav/